# Mellivora_OS_PicoCalc

./: .gitignore  ABOUT.md  CODE_OF_CONDUCT.md  Containerfile  LICENSE  Makefile  README.md  SECURITY.md
picocalc/: CMakeLists.txt  README.md  pico_sdk_import.cmake
picocalc/build-pico2/: CMakeCache.txt  Makefile  cmake_install.cmake  mellivora_picocalc.dis  mellivora_picocalc.elf  mellivora_picocalc.elf.map  mellivora_picocalc.hex  mellivora_picocalc.uf2  mellivora_picocalc_pico2.uf2
picocalc/build-pico2/pico-sdk/: Makefile  cmake_install.cmake
picocalc/build-pico2/pico-sdk/docs/: Makefile
picocalc/build-pico2/pico-sdk/src/: Makefile  cmake_install.cmake
picocalc/build-pico2/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
picocalc/build-pico2/pico-sdk/src/common/boot_picoboot_headers/: Makefile
picocalc/build-pico2/pico-sdk/tools/: Makefile
picocalc/build-pico2w/: CMakeCache.txt  Makefile  cmake_install.cmake  mellivora_picocalc.elf  mellivora_picocalc.elf.map  mellivora_picocalc.hex  mellivora_picocalc.uf2  mellivora_picocalc_pico2w.uf2
picocalc/build-pico2w/pico-sdk/: Makefile  cmake_install.cmake
picocalc/build-pico2w/pico-sdk/docs/: Makefile  cmake_install.cmake
picocalc/build-pico2w/pico-sdk/src/: Makefile  cmake_install.cmake
picocalc/build-pico2w/pico-sdk/tools/: Makefile  cmake_install.cmake
picocalc/build-pico2w/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
picocalc/src/: apps.c  apps.h  fat.c  fat.h  kbd.c  kbd.h  lcd.c  lcd.h  lwipopts.h  main.c  net.c  net.h  netapps.c  netapps.h  picocalc_hw.h  sd.c  sd.h  syscall.c  syscall.h
picocalc/src/apps/: fs.c  fs.h  hex.c  hex.h  text.c  text.h
(+313 files in other folders)
